crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__listen_action_flows_interface_to_streaming_result.snap
---
source: tests/tui.rs
expression: "format!(\"{}\", term.backend())"
---
"Result                                  "
"┌listen .Changed───────────────────────┐"
"│signal  sender=:1.1                   │"
"│  …block1                             │"
"│                                      │"
"│signal  sender=:1.2                   │"
"│  …block2                             │"
"│                                      │"
"└──────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc bac"
