crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__listen_refused_renders_error_on_result.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 44, 6)"
---
"Result                                      "
"┌listen org.busx.Test.Ping─────────────────┐"
"│error: BecomeMonitor refused: ...         │"
"│                                          │"
"└──────────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc back/st"
