crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__listen_result_renders_streaming_messages.snap
---
source: tests/tui.rs
expression: "render_to_string(&state, 52, 10)"
---
"Result                                              "
"┌listen i.Changed──────────────────────────────────┐"
"│signal  sender=:1.1                               │"
"│  interface=i  member=Changed  serial=7           │"
"│  3                                               │"
"│signal  sender=:1.1                               │"
"│  interface=i  member=Changed  serial=9           │"
"│  4                                               │"
"└──────────────────────────────────────────────────┘"
"↑↓ scroll · c copy-as · y copy · Esc back/stop · q q"
