crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__loop_loads_services_then_navigates.snap
---
source: tests/tui.rs
assertion_line: 402
expression: "format!(\"{}\", term.backend())"
---
"                                            "
"┌Services──────────────────────────────────┐"
"│org.busx.A                           111  │"
"│org.busx.B                                │"
"│                                          │"
"│                                          │"
"└──────────────────────────────────────────┘"
"↑↓ select · Enter open · / filter · q quit ·"
