crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__service_screen_down_arrow_moves_selection.snap
---
source: tests/tui.rs
assertion_line: 115
expression: "render_to_string(&state, 40, 7)"
---
"                                        "
"┌Services──────────────────────────────┐"
"│a                                     │"
"│b                                     │"
"│c                                     │"
"└──────────────────────────────────────┘"
"↑↓ select · Enter open · / filter · q qu"
