crates/busx/src/tui/snapshots/busx__tui__snapshot_tests__service_screen_loading_state.snap
---
source: tests/tui.rs
assertion_line: 203
expression: "render_to_string(&state, 40, 6)"
---
"                                        "
"┌Services (loading…)───────────────────┐"
"│                                      │"
"│                                      │"
"└──────────────────────────────────────┘"
"↑↓ select · Enter open · / filter · q qu"
